Added first passed test - Artist Get All

--- a/backend/ApiProject.Tests/ApiProject.Tests.csproj
+++ b/backend/ApiProject.Tests/ApiProject.Tests.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ApiProject\ApiProject.csproj" />
+  </ItemGroup>
+
 </Project>
